[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coffee"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Will McGugan", email = "willmcgugan@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["textual"]

[project.urls]
Documentation = "https://github.com/Will McGugan/coffee#readme"
Issues = "https://github.com/Will McGugan/coffee/issues"
Source = "https://github.com/Will McGugan/coffee"

[tool.hatch.version]
path = "src/coffee/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/coffee tests}"

[tool.coverage.run]
source_pkgs = ["coffee", "tests"]
branch = true
parallel = true
omit = [
  "src/coffee/__about__.py",
]

[tool.coverage.paths]
coffee = ["src/coffee", "*/coffee/src/coffee"]
tests = ["tests", "*/coffee/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
